Fixed missing background image on heroku...hopefully

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -5,7 +5,7 @@
 
 body{
 	font-size: 16px;
-	background:url('roses.jpg');
+	background: image-url('roses.jpg');
 	background-size: cover;
 }
 
